// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Form /> component renders simple form 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  row-gap: 24px;
}

.emotion-2 {
  display: block;
  height: auto;
  width: 100%;
  position: relative;
}

.emotion-4 {
  font-weight: 400;
  font-size: 16px;
  line-height: 21.44px;
  letter-spacing: normal;
  margin: 0;
  color: #8B8C8C;
  cursor: inherit;
  font-size: 1rem;
  left: 15px;
  top: 15px;
  position: absolute;
  -webkit-transform: translateY(0);
  -moz-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
  -webkit-transition: -webkit-transform 150ms ease-out,font-size 150ms ease-out;
  transition: transform 150ms ease-out,font-size 150ms ease-out;
}

.emotion-6 {
  font-weight: 400;
  font-size: 16px;
  line-height: 21.44px;
  letter-spacing: normal;
  margin: 0;
  background-color: #FFFFFF;
  border: 1px solid #323232;
  border-bottom: 1px solid #323232;
  color: #151617;
  min-width: 198px;
  padding: 20px 15px 5px 15px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  height: 53px;
}

.emotion-6:focus {
  border-bottom: 2px solid #036DC1;
  outline: none;
}

<div>
  <form
    class="emotion-0 emotion-1"
    data-testid="test-form"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <label
        class="emotion-4 emotion-5"
        data-testid="label-field"
        for="label-1"
      >
        label 1
         
      </label>
      <input
        class="emotion-6 emotion-7"
        id="label-1"
        name="label-1"
        type="text"
        value=""
      />
    </div>
    <div
      class="emotion-2 emotion-3"
    >
      <label
        class="emotion-4 emotion-5"
        data-testid="label-field"
        for="label-2"
      >
        label 2
         
      </label>
      <input
        class="emotion-6 emotion-7"
        id="label-2"
        name="label-2"
        type="text"
        value=""
      />
    </div>
  </form>
</div>
`;

exports[`<Form /> component with Form.Group should render a disabled form group 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  row-gap: 24px;
}

.emotion-2 {
  row-gap: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  color: #8B8C8C;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-column-gap: 16px;
  column-gap: 16px;
  -webkit-box-pack: stretch;
  -ms-flex-pack: stretch;
  -webkit-justify-content: stretch;
  justify-content: stretch;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  opacity: 0.5;
  pointer-events: none;
}

.emotion-6 {
  display: block;
  height: auto;
  width: 100%;
  position: relative;
}

.emotion-8 {
  font-weight: 400;
  font-size: 16px;
  line-height: 21.44px;
  letter-spacing: normal;
  margin: 0;
  color: #8B8C8C;
  cursor: inherit;
  font-size: 1rem;
  left: 15px;
  top: 15px;
  position: absolute;
  -webkit-transform: translateY(0);
  -moz-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
  -webkit-transition: -webkit-transform 150ms ease-out,font-size 150ms ease-out;
  transition: transform 150ms ease-out,font-size 150ms ease-out;
}

.emotion-10 {
  font-weight: 400;
  font-size: 16px;
  line-height: 21.44px;
  letter-spacing: normal;
  margin: 0;
  background-color: #FFFFFF;
  border: 1px solid #323232;
  border-bottom: 1px solid #323232;
  color: #151617;
  min-width: 198px;
  padding: 20px 15px 5px 15px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  height: 53px;
}

.emotion-10:focus {
  border-bottom: 2px solid #036DC1;
  outline: none;
}

<div>
  <form
    class="emotion-0 emotion-1"
    data-testid="test-form"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
        disabled=""
      >
        <div
          class="emotion-6 emotion-7"
        >
          <label
            class="emotion-8 emotion-9"
            data-testid="label-field"
            for="label-1"
          >
            label 1
             
          </label>
          <input
            class="emotion-10 emotion-11"
            id="label-1"
            name="label-1"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`<Form /> component with Form.Group should render a form with display flex 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  row-gap: 24px;
}

.emotion-2 {
  row-gap: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  color: #8B8C8C;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-column-gap: 16px;
  column-gap: 16px;
  -webkit-box-pack: stretch;
  -ms-flex-pack: stretch;
  -webkit-justify-content: stretch;
  justify-content: stretch;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-6 {
  display: block;
  height: auto;
  width: 100%;
  position: relative;
}

.emotion-8 {
  font-weight: 400;
  font-size: 16px;
  line-height: 21.44px;
  letter-spacing: normal;
  margin: 0;
  color: #8B8C8C;
  cursor: inherit;
  font-size: 1rem;
  left: 15px;
  top: 15px;
  position: absolute;
  -webkit-transform: translateY(0);
  -moz-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
  -webkit-transition: -webkit-transform 150ms ease-out,font-size 150ms ease-out;
  transition: transform 150ms ease-out,font-size 150ms ease-out;
}

.emotion-10 {
  font-weight: 400;
  font-size: 16px;
  line-height: 21.44px;
  letter-spacing: normal;
  margin: 0;
  background-color: #FFFFFF;
  border: 1px solid #323232;
  border-bottom: 1px solid #323232;
  color: #151617;
  min-width: 198px;
  padding: 20px 15px 5px 15px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  height: 53px;
}

.emotion-10:focus {
  border-bottom: 2px solid #036DC1;
  outline: none;
}

<div>
  <form
    class="emotion-0 emotion-1"
    data-testid="test-form"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
        >
          <label
            class="emotion-8 emotion-9"
            data-testid="label-field"
            for="label-1"
          >
            label 1
             
          </label>
          <input
            class="emotion-10 emotion-11"
            id="label-1"
            name="label-1"
            type="text"
            value=""
          />
        </div>
        <div
          class="emotion-6 emotion-7"
        >
          <label
            class="emotion-8 emotion-9"
            data-testid="label-field"
            for="label-2"
          >
            label 2
             
          </label>
          <input
            class="emotion-10 emotion-11"
            id="label-2"
            name="label-2"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`<Form /> component with Form.Group should render a form with group title 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  row-gap: 24px;
}

.emotion-2 {
  row-gap: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  color: #8B8C8C;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-column-gap: 10px;
  column-gap: 10px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 {
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.5rem;
  letter-spacing: normal;
  margin: 0;
  color: #002441;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-column-gap: 16px;
  column-gap: 16px;
  -webkit-box-pack: stretch;
  -ms-flex-pack: stretch;
  -webkit-justify-content: stretch;
  justify-content: stretch;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-10 {
  display: block;
  height: auto;
  width: 100%;
  position: relative;
}

.emotion-12 {
  font-weight: 400;
  font-size: 16px;
  line-height: 21.44px;
  letter-spacing: normal;
  margin: 0;
  color: #8B8C8C;
  cursor: inherit;
  font-size: 1rem;
  left: 15px;
  top: 15px;
  position: absolute;
  -webkit-transform: translateY(0);
  -moz-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
  -webkit-transition: -webkit-transform 150ms ease-out,font-size 150ms ease-out;
  transition: transform 150ms ease-out,font-size 150ms ease-out;
}

.emotion-14 {
  font-weight: 400;
  font-size: 16px;
  line-height: 21.44px;
  letter-spacing: normal;
  margin: 0;
  background-color: #FFFFFF;
  border: 1px solid #323232;
  border-bottom: 1px solid #323232;
  color: #151617;
  min-width: 198px;
  padding: 20px 15px 5px 15px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  height: 53px;
}

.emotion-14:focus {
  border-bottom: 2px solid #036DC1;
  outline: none;
}

<div>
  <form
    class="emotion-0 emotion-1"
    data-testid="test-form"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <p
          class="emotion-6 emotion-7"
          color="blue_100"
          data-testid="typography"
          style="text-transform: uppercase;"
        >
          Group title
        </p>
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        <div
          class="emotion-10 emotion-11"
        >
          <label
            class="emotion-12 emotion-13"
            data-testid="label-field"
            for="label-1"
          >
            label 1
             
          </label>
          <input
            class="emotion-14 emotion-15"
            id="label-1"
            name="label-1"
            type="text"
            value=""
          />
        </div>
        <div
          class="emotion-10 emotion-11"
        >
          <label
            class="emotion-12 emotion-13"
            data-testid="label-field"
            for="label-2"
          >
            label 2
             
          </label>
          <input
            class="emotion-14 emotion-15"
            id="label-2"
            name="label-2"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;
